--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-h5-audio-player": "^3.9.1",
     "react-router-dom": "^6.23.0",
     "react-social-login-buttons": "^4.1.0",
     "yup": "^1.4.0"
