--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
+    "react-big-calendar": "^1.12.2",
     "react-h5-audio-player": "^3.9.1"
   }
 }
