--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "date-fns": "^3.6.0",
     "react-big-calendar": "^1.12.2",
     "react-calendar": "^5.0.0",
+    "react-datepicker": "^6.9.0",
     "react-h5-audio-player": "^3.9.1"
   }
 }
