--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.18",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "react-big-calendar": "^1.12.2",
     "react-calendar": "^5.0.0",
     "react-datepicker": "^6.9.0",
-    "react-h5-audio-player": "^3.9.1"
+    "react-h5-audio-player": "^3.9.1",
+    "react-youtube": "^10.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
