--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "moment-timezone": "^0.5.45",
     "react-big-calendar": "^1.12.2",
     "react-calendar": "^5.0.0",
+    "react-calendar-heatmap": "^1.9.0",
     "react-datepicker": "^6.9.0",
     "react-h5-audio-player": "^3.9.1",
+    "react-tooltip": "^5.26.4",
     "react-youtube": "^10.1.0"
   },
   "devDependencies": {
