--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ faker = "*"
 flask-jwt-extended = "*"
 flask-login = "*"
 flask-bcrypt = "*"
+requests = "*"
 
 [requires]
 python_full_version = "3.8.13"
