--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "vite preview"
   },
   "dependencies": {
     "formik": "^2.4.6",
@@ -16,7 +17,18 @@
     "react-h5-audio-player": "^3.9.1",
     "react-router-dom": "^6.23.0",
     "react-social-login-buttons": "^4.1.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "axios": "^1.3.3",
+    "@mui/material": "^5.11.7",
+    "react-calendar-heatmap": "^1.8.0",
+    "moment-timezone": "^0.5.34",
+    "moment": "^2.29.1",
+    "react-datepicker": "^4.2.1",
+    "react-big-calendar": "^0.33.3",
+    "react-tooltip": "^4.2.21",
+    "react-youtube": "^9.0.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
